# snake

./: README.md  meson.build  wasm-cross.ini
src/: main.c  snake.c  snake.h
